@@ -87,6 +87,7 @@ public class TestJettyMultipleCerts
                 ImmutableSet.of(),
                 ImmutableSet.of(),
                 false,
+                false,
                 ClientCertificate.NONE,
                 new RequestStats(),
                 new NullEventClient(),
