@@ -1,6 +1,7 @@
 243
 
 - Use pipe as separator for openmetrics object names config
+- Add support for Jetty legacy URI compliance
 
 242
 - Update airbase to 151
